--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <style>
-  h1{color: Purple}
+/*CSS stuff*/
+  h1{color: Purple;
+  font-size: 80px}
   h2{color: Blue}
 </style>
-
+<!--html-->
 <p>
   <h1>Cool website</h1>
   <h2>by Avril</h2>
