--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <style>
 /*CSS stuff*/
   h1{color: Purple;
-  font-size: 80px}
-  h2{color: Blue}
+  font-size: 80px;
+  font-family: sans-serif}
+  h2{color: Black}
 </style>
 <!--html-->
 <p>
