--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <style>
 /*CSS stuff*/
-  h1{color: Purple;
-  font-size: 80px;
+  h1
+  {color: Purple;
+  font-size: 30px;
   font-family: sans-serif}
-  h2{color: Black}
-  img{width: 500px;
-  border: 20px dotted purple;
+  h2
+  {color: Black}
+  img
+  {width: 500px;
+  border: 10px dotted purple;
   padding: 10px}
-  p{color: green;
-  padding: 15px;
-  margin: 15px}
-  br{padding: 30px}
+  p
+  {color: green;
+  padding: 10px;
+  margin: 0px}
+  br
+  {padding: 30px}
+  
+  .special{
+    color: green;
+    font-size: 20px;
+    border:10px;
+  }
 </style>
 <!--html-->
 <p>
